--- a/ItemRack/Changelog.txt
+++ b/ItemRack/Changelog.txt
@@ -1,4 +1,7 @@
 __ New in 4.27 - By Bl4ut0 __
+- Added Adaptive Multi-Spec Support:
+  - UI now adapts to show "Secondary Spec" option only if Dual Spec is learned.
+  - Spec checkboxes are dynamically named based on your highest point talent tree (e.g. "Holy", "Arms") for easier identification.
 - Fixed Issue with ItemRack Buttons inheriting ActionButton traits (Keybinds, Red Flash on Auto Attack)
 - Fixed Stacked UI elements "Select a slot" and "Press a key" overlapping 
 
